# weather-app

./: .gitignore  Dockerfile  README.md  doxy_file  run-clang-format.py
Documentation/: Prikaz detaljnih informacija lokacije - slucaj upotrebe.txt  UseCaseDiagram.vpd
Documentation/Dijagrami sekvence/: Dijagram_PocetneStrane.vpd  dijagram_PocetneStrane.vpd  dijagram_Podesavanja.vpd  dijagram_Podešavanja.vpd
Documentation/Initial documentation/Opisi slucajeva upotrebe/: Pocetna stranica -  slucaj upotrebe.txt  Podesavanja - slucaj upotrebe.txt
DoxygenDocumentation/html/: _main_window_8h_source.html  annotated.html  class_main_window-members.html  class_main_window.html  classes.html  dir_74389ed8173ad57b461b9d623a1f3867.html  doxygen_crawl.html  files.html  hierarchy.html  index.html
DoxygenDocumentation/latex/: _main_window_8h_source.tex  class_main_window.tex  files.tex  hierarchy.tex  refman.tex
Final Documentation/: UseCaseDiagram.vpd
Final Documentation/Dijagrami sekvence/: dijagram_DetaljneStrane.vpd
Final Documentation/Opisi slučajeva upotrebe/: Prikaz_detaljnih_informacija_lokacije_-_slucaj_upotrebe.txt
Serialization/: saved-locations.json  settings.json
Source/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  config.ini  main.cpp
Source/Api/: ApiHandler.cpp  ApiHandler.h  DetailedWeatherAPI.cpp  DetailedWeatherAPI.h  GeocodingAPI.cpp  GeocodingAPI.h  Parser.cpp  Parser.h  WeatherAPI.cpp  WeatherAPI.h
Source/Data/: Data.h  DetailedWeatherData.cpp  DetailedWeatherData.h  GeoLocationData.cpp  GeoLocationData.h  WeatherData.cpp  WeatherData.h
Source/Pages/: CustomCompleter.cpp  CustomCompleter.h  DetailedWeatherPage.cpp  DetailedWeatherPage.h  ErrorPage.cpp  ErrorPage.h  HomePage.cpp  HomePage.h  Page.cpp  Page.h
Source/Settings/: Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  WidgetsManager.h
Source/Utils/: GraphDialog.cpp  GraphDialog.h  Serializable.h  Serializer.cpp  Serializer.h  UserLocation.cpp  UserLocation.h
Source/Widgets/: BasicWidget.cpp  BasicWidget.h  DetailedPageWidgets.cpp  DetailedPageWidgets.h  ErrorWidget.cpp  ErrorWidget.h  WeatherWidget.cpp  WeatherWidget.h
Tests/: CMakeLists.txt  catch.hpp  main.cpp  test_BasicWidget.cpp  test_CustomCompleter.cpp  test_DetailedWeatherAPI.cpp  test_DetailedWeatherData.cpp  test_DetailedWeatherPage.cpp  test_ErrorWiget.cpp  test_GeoLocationData.cpp  test_HomePage.cpp  test_MainWindow.cpp  test_Parser.cpp  test_Serializer.cpp  test_Settings.cpp  test_UserLocation.cpp  test_WeatherAPI.cpp  test_WeatherData.cpp  test_WeatherWidget.cpp
Tests/Resources/: detailedWeatherData.txt  serializer.json  variantValue.txt  weatherData.txt
weather-app/: ApiHandler.cpp  ApiHandler.h  CMakeLists.txt  CustomCompleter.cpp  Data.cpp  Data.h  DetailedPageWidgets.cpp  DetailedPageWidgets.h  DetailedWeatherAPI.cpp  DetailedWeatherAPI.h  DetailedWeatherData.cpp  DetailedWeatherData.h  DetailedWeatherPage.cpp  DetailedWeatherPage.h  GeoLocationData.cpp  GeoLocationData.h  GeocodingAPI.cpp  GeocodingAPI.h  HomePage.cpp  HomePage.h  HomePage.h.qEEfvn  MainWindow.cpp  MainWindow.h  MainWindow.ui  Page.cpp  Page.h  Parser.cpp  Parser.h  Serializer.cpp  Serializer.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  UserLocation.cpp  UserLocation.h  UserLocationWidget.cpp  UserLocationWidget.h  WeatherAPI.cpp  WeatherAPI.h  (+11 more)
weather-app/tests/: test_geocodingapi.cpp
